--- a/contact.html
+++ b/contact.html
@@ -1,87 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - My Blog</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Contact Us - EcoBlog</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <style>
+    :root {
+      --primary-color: #2e7d32;
+      --hover-color: #1b5e20;
+      --light-bg: #e8f5e9;
+      --text-color: #333;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      background: linear-gradient(to right, var(--light-bg), #ffffff);
+      color: var(--text-color);
+      margin: 0;
+      padding-top: 70px;
+    }
+
+    .navbar-custom {
+      background-color: white;
+      border-bottom: 1px solid #ddd;
+    }
+
+    .navbar-brand {
+      font-weight: 700;
+      color: var(--primary-color) !important;
+    }
+
+    .nav-link {
+      color: #555 !important;
+      font-weight: 500;
+    }
+
+    .nav-link:hover {
+      color: var(--primary-color) !important;
+    }
+
+    .container-form {
+      max-width: 600px;
+      margin: auto;
+      background-color: #fff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+    }
+
+    h2 {
+      text-align: center;
+      color: var(--primary-color);
+      margin-bottom: 30px;
+    }
+
+    label {
+      margin-top: 10px;
+      font-weight: bold;
+    }
+
+    input, textarea {
+      margin-top: 5px;
+      margin-bottom: 15px;
+    }
+
+    button {
+      background-color: var(--primary-color);
+      color: white;
+      width: 100%;
+    }
+
+    button:hover {
+      background-color: var(--hover-color);
+    }
+
+    footer {
+      background-color: #0f172a;
+      color: white;
+      padding: 40px 0;
+    }
+
+    footer a {
+      color: #ccc;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      color: white;
+    }
+
+    .social-link {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 40px;
+      height: 40px;
+      margin-right: 0.5rem;
+      background-color: rgba(255, 255, 255, 0.1);
+      border-radius: 50%;
+      color: white;
+      transition: background-color 0.2s ease;
+    }
+
+    .social-link:hover {
+      background-color: var(--primary-color);
+    }
+  </style>
 </head>
 <body>
-   <!-- Navbar Start -->
-   <nav class="navbar navbar-expand-lg navbar-navy" style="background-color: rgb(36, 129, 192);">
-    <a class="navbar-brand" href="#">My Blog</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="./index.html">Home </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./post.html">Posts</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./Service.html">Service</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./about.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="./contact.html">Contact</a>
-        </li>
-      </ul>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light navbar-custom fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="/index.html">EcoBlog</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="/post.html">Posts</a></li>
+          <li class="nav-item"><a class="nav-link" href="/Service.html">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="/about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link active" href="/contact.html">Contact</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
-  <!-- Navbar End -->
-    <div class="container my-5" style="color: rgb(56, 182, 182);">
-        <h2 class="text-center mb-4" >Contact Us</h2>
-        <p class="text-center lead" >Have any questions or feedback? We’d love to hear from you!</p>
 
-        <div class="row mt-5">
-            <!-- Contact Information -->
-            <div class="col-md-5" >
-                <h4>Contact Information</h4>
-                <p><strong>Address:</strong> 123 Blog Street, Cityville, Country</p>
-                <p><strong>Phone:</strong> +123 456 7890</p>
-                <p><strong>Email:</strong> contact@myblog.com</p>
-                <h5>Follow Us</h5>
-                <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-facebook"></i> Facebook</a>
-                <a href="#" class="btn btn-primary btn-sm me-2"><i class="bi bi-twitter"></i> Twitter</a>
-                <a href="#" class="btn btn-primary btn-sm"><i class="bi bi-instagram"></i> Instagram</a>
-            </div>
+  <!-- Contact Form -->
+  <div class="container container-form my-5">
+    <h2>Contact Us</h2>
+    <form action="https://formsubmit.co/velangovanbe27@gmail.com" method="POST">
+      <input type="hidden" name="_captcha" value="false">
+      <input type="hidden" name="_next" value="https://elangovan08.github.io/EcoBlog/thankyou.html">
+      
+      <label for="name">Full Name</label>
+      <input type="text" class="form-control" id="name" name="name" required>
 
-            <!-- Contact Form -->
-            <div class="col-md-7">
-                <form>
-                    <div class="mb-3">
-                        <label for="name" class="form-label">Full Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Your Name" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="email" class="form-label">Email Address</label>
-                        <input type="email" class="form-control" id="email" placeholder="Your Email" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="subject" class="form-label">Subject</label>
-                        <input type="text" class="form-control" id="subject" placeholder="Subject" required>
-                    </div>
-                    <div class="mb-3">
-                        <label for="message" class="form-label">Message</label>
-                        <textarea class="form-control" id="message" rows="5" placeholder="Your Message" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
-            </div>
+      <label for="email">Email Address</label>
+      <input type="email" class="form-control" id="email" name="email" required>
+
+      <label for="subject">Subject</label>
+      <input type="text" class="form-control" id="subject" name="subject" required>
+
+      <label for="message">Message</label>
+      <textarea class="form-control" id="message" name="message" rows="5" required></textarea>
+
+      <button type="submit" class="btn mt-3">Send Message</button>
+    </form>
+  </div>
+
+  <!-- Footer -->
+  <footer class="text-light">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4 mb-4">
+          <h5>EcoBlog</h5>
+          <p>Sharing knowledge, stories, and insights with our readers worldwide.</p>
+          <div>
+            <a href="#" class="social-link"><i class="bi bi-twitter"></i></a>
+            <a href="#" class="social-link"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="social-link"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="social-link"><i class="bi bi-linkedin"></i></a>
+          </div>
         </div>
+        <div class="col-md-2 mb-4">
+          <h6>Quick Links</h6>
+          <ul class="list-unstyled">
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/post.html">Posts</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2 mb-4">
+          <h6>Categories</h6>
+          <ul class="list-unstyled">
+            <li><a href="#">Technology</a></li>
+            <li><a href="#">Lifestyle</a></li>
+            <li><a href="#">Business</a></li>
+            <li><a href="#">Travel</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4 mb-4">
+          <h6>Newsletter</h6>
+          <p class="small">Subscribe to get our latest posts delivered to your inbox.</p>
+          <form class="newsletter-form">
+            <div class="input-group">
+              <input type="email" class="form-control" placeholder="Your email" required>
+              <button class="btn btn-success" type="submit">Subscribe</button>
+            </div>
+          </form>
+        </div>
+      </div>
+      <hr />
+      <div class="d-flex justify-content-between small">
+        <span>&copy; 2025 EcoBlog. All rights reserved.</span>
+        <div>
+          <a href="#">Privacy Policy</a> |
+          <a href="#">Terms</a> |
+          <a href="#">Sitemap</a>
+        </div>
+      </div>
     </div>
+  </footer>
 
-    <!-- Footer -->
-    <footer class="bg-primary text-white text-center py-4">
-        <p>&copy; 2024 My Blog. Connect with us on <a href="#" class="text-white">Twitter</a>, <a href="#" class="text-white">Facebook</a>.</p>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Newsletter Handler -->
+  <script>
+    document.querySelectorAll(".newsletter-form").forEach(form => {
+      form.addEventListener("submit", function(e) {
+        e.preventDefault();
+        const email = this.querySelector("input[type='email']").value;
+        if (/^[^\\s@]+@[^\\s@]+\\.[^\\s@]+$/.test(email)) {
+          alert("Thank you for subscribing!");
+          this.reset();
+        } else {
+          alert("Please enter a valid email.");
+        }
+      });
+    });
+  </script>
 </body>
 </html>
