--- a/post.html
+++ b/post.html
@@ -171,10 +171,10 @@
                         <a class="nav-link" href="./index.html" aria-current="page">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="post.html">Posts</a>
+                        <a class="nav-link" href=".">Posts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Service.html">Services</a>
+                        <a class="nav-link" href="/Service.html">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">About</a>
