--- a/post.html
+++ b/post.html
@@ -174,7 +174,7 @@
                         <a class="nav-link" href="post.html">Posts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Service.html">Services</a>
+                        <a class="nav-link" href="./Service.html">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./about.html">About</a>
