--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <h1 class="display-4 fw-bold mb-4">Welcome to EcoBlog</h1>
             <p class="lead mb-4">Empowering change through awareness – explore topics on environment, peace, and sustainable development</p>
             <div class="hero-actions">
-                <a href="/post.html" class="btn btn-primary btn-lg me-3">
+                <a href="./post.html" class="btn btn-primary btn-lg me-3">
                     <i class="bi bi-book me-2"></i>
                     Read Posts
                 </a>
@@ -240,7 +240,7 @@
             <section aria-labelledby="featured-posts-heading">
                 <div class="d-flex justify-content-between align-items-center mb-4">
                     <h2 id="featured-posts-heading" class="h3">Featured Posts</h2>
-                    <a href="./posts.html" class="btn btn-outline-primary">View All Posts</a>
+                    <a href="./post.html" class="btn btn-outline-primary">View All Posts</a>
                 </div>
 
                 <div class="row g-4">
@@ -264,7 +264,7 @@
                                             4 min read
                                         </small>
                                     </div>
-                                    <a href="/post.html" class="btn btn-primary">Read Article</a>
+                                    <a href="./post.html" class="btn btn-primary">Read Article</a>
                                 </div>
                             </div>
                         </article>
@@ -290,7 +290,7 @@
                                             5 min read
                                         </small>
                                     </div>
-                                    <a href="/post.html" class="btn btn-primary">Read Article</a>
+                                    <a href="./post.html" class="btn btn-primary">Read Article</a>
                                 </div>
                             </div>
                         </article>
